[package]
name = "reee"
version = "0.3.0"
authors = ["/alex/"]
edition = "2018"

[dependencies]
bus = "2.2.2"
tokio = { version = "0.1.22", features = ["rt-full"] }
crossbeam-channel = "0.3.8"
uuid = { version = "0.7.4", features = ["v4" ] }
parking_lot = { version = "0.8.0", optional = true }
tokio-signal = "0.2.7"
futures = "0.1.28"
structopt = "0.2.18"

[features]
default = []
faster = []

[lib]
name = "reee"
path = "src/lib.rs"

[[bin]]
name = "reee"
path = "src/main.rs"

[dev-dependencies]
rand = "0.7.0"
crossterm = "0.9.6"


